About Section Build. Copy Img & Subject Line Added

--- a/index.html
+++ b/index.html
@@ -27,10 +27,27 @@
 </div>
 
 <!-- Nav -->
+
 <body>
 
 
+
 <!-- About -->
+<h2>About</h2>
+
+    <div class="bio-container">
+        <div class="bio-photo">
+        </div>
+        <div class="bio-copy">
+            <div class="copy-card">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis quam ipsum quibusdam, quaerat excepturi asperiores dignissimos quo officia possimus pariatur animi illo modi minima tenetur vel sunt ab. Atque rerum enim tenetur quaerat laudantium modi, nesciunt sit eius laborum sint autem labore facilis ex, nostrum et. Unde libero beatae quibusdam illum dolores cumque nihil debitis quae? Sint impedit vitae, eius possimus illum, quis, amet minima illo magni nobis dolorum quaerat. Pariatur voluptate fugit minima! Neque sapiente obcaecati doloribus. Excepturi asperiores, ea maxime ad quia corporis dolorem suscipit delectus, veniam veritatis quo aliquid illum! Odio sunt laborum consequuntur atque dolorem! Voluptate?</p>
+            </div>
+        </div>
+
+    </div>
+
+
+
 
 <!-- Capabilites -->
 
