Final, Final Spelling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <!-- Hero Image -->
 <div class="hero-container">
     <div class="hero-card">
-    <image src="./Assets/banner2.png" alt="a lovely sunset"></image>
+    <image src="./Assets/banner2.png" alt="A lovely sunset"></image>
     </div>
 </div>
 
@@ -60,11 +60,11 @@
     <h2>Case Studies</h2>
 
 <div class="caseStudycard">
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="./Assets/tyrell3.png" alt="tyrell logo"></a>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="./Assets/tyrell3.png" alt="Tyrell Corp. Logo"></a>
 </div>
 
 <div class="caseStudycard2">
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="./Assets/horiseon4.png" alt="horiseon logo"></a>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="./Assets/horiseon4.png" alt="Horiseon Logo"></a>
 </div>
     
 <div class="caseStudycard">
